--- a/views/bio.erb
+++ b/views/bio.erb
@@ -5,7 +5,7 @@
 	<title>Bio</title>
 	<link rel="stylesheet" type="text/css" href="bio_style.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
-	<script type="text/javascript" src="jquery.min.js"></script>
+	<script type="text/javascript" src="bootstrap/jquery.min.js"></script>
 	<script type="text/javascript" src="jquery-ui.js"></script>
 	<script type="text/javascript" src="bootstrap.min.js"></script>
 	<script type="text/javascript" src="charter/charter.js"></script>
