--- a/views/bio.erb
+++ b/views/bio.erb
@@ -13,13 +13,6 @@
 	<script type="text/javascript">
 	$(document).ready(function() {
 		$("img").slideDown(750, "easeOutElastic").delay(500);
-		$(".icon > i").hover(function() {
-			$(this).removeClass("fa-2x");
-			$(this).addClass("fa-3x");
-		}, function() {
-			$(this).addClass("fa-2x");
-			$(this).removeClass("fa-3x");
-		})
 	})
 	</script>
 </head>
@@ -44,8 +37,8 @@
 		<p>I will have my name on some of the best web sites/web apps out there! Will yours be included?</p>
 	</div>
 </div>
-<div class="row">
-	<p id="icons"><a class="icon" href="https://www.github.com/conedeathaps"><i class="fa fa-github fa-2x"></i></a><a class="icon" href="www.linkedin.com/in/sorensenapaul"><i class="fa fa-linkedin fa-2x"></i></a><a class="icon" href="www.twitter.com/conedeathaps"><i class="fa fa-twitter fa-2x"></i></a></p>
+<div class="row footer">
+	<div id="icons"><a class="icon" href="https://www.github.com/conedeathaps"><i class="fa fa-github fa-2x"></i></a><a class="icon" href="www.linkedin.com/in/sorensenapaul"><i class="fa fa-linkedin fa-2x"></i></a><a class="icon" href="www.twitter.com/conedeathaps"><i class="fa fa-twitter fa-2x"></i></a></div>
 </div>
 </body>
 </html>
